import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

allprojects {
    apply plugin: 'scala'
    apply plugin: 'com.github.johnrengelman.shadow'

    group 'fr.warzou'
    version '0.1.0'

    jar.manifest.attributes('Main-Class': 'fr.warzou.popcode.main.POpCode')

    repositories {
        mavenLocal()
        mavenCentral()
        flatDir { dirs 'jars' }
    }

    jar.archiveFileName = "${project.name}.jar"
    shadowJar.archiveFileName = jar.archiveFileName

    processResources.from(sourceSets.main.resources.srcDirs) {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
        filter(ReplaceTokens, tokens: [VERSION: project.version])
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['--enable-preview']
        targetCompatibility = JavaVersion.VERSION_16
        sourceCompatibility = JavaVersion.VERSION_16
    }
}

dependencies {
    implementation 'org.scala-lang:scala-library:2.13.6'
    testImplementation 'org.scalatest:scalatest_2.11:3.2.9'
    testImplementation 'junit:junit:4.13.2'
}